--- a/css/landing.scss
+++ b/css/landing.scss
@@ -14,6 +14,10 @@ body > header > img {
 	margin-right: auto;
 }
 
+main article > header h1 {
+	background: none;
+}
+
 .ribbon {
 	width: 240px;
 	height: 240px;
